--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,33 @@
+.container {
+  display: grid;
+  width: 1000px;
+  grid-template: 1fr 1fr 1fr / 200px 1fr;
+  grid-gap: 10px 15px; 
+}
+
+.photo {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.about {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
 .photo img {
-    border: 2pt solid rgb(84, 55, 153);
-    width: 200px;
-    height: 200px;
-    
+  border: 2pt solid rgb(84, 55, 153);
+  width: 200px;
+  height: 200px;    
+}
+
+.education table {
+  width: 700px;
+}
+
+.education th {
+  border: 1px solid rgb(84, 55, 153);
+  text-align: center;
+}
+
+.education td {
+  text-align: center;
 }
