--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,11 @@
 .container {
   display: grid;
   width: 1000px;
+  height: 1000px;
   grid-template: 1fr 1fr 1fr / 200px 1fr;
   grid-gap: 10px 15px; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .photo {
